force-app/main/default/objects/Sym_Case__c/Sym_Case__c.object-meta.xml
<CustomObject>
    <description>Object created for POC/Project Symphony - Case__c is a custom object to hold records that are produced as snapshot of the transaction</description>
    <label>Case (Group)</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Case</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>