force-app/main/default/objects/Sym_Case__c/fields/Employee_Spouse_PMPM__c.field-meta.xml
<CustomField>
    <fullName>Employee_Spouse_PMPM__c</fullName>
    <label>Employee Spouse PMPM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>