force-app/main/default/objects/Sym_Case__c/fields/Sym_account_name__c.field-meta.xml
<CustomField>
    <fullName>Sym_account_name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>