force-app/main/default/objects/Sym_Case__c/fields/Sym_Active_Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Sym_Active_Member_Count__c</fullName>
    <label>Active Member Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>