force-app/main/default/objects/Sym_Case__c/fields/Sym_Admin_Fee_Basis__c.field-meta.xml
<CustomField>
    <fullName>Sym_Admin_Fee_Basis__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Admin Fee Basis</label>
    <length>160</length>
    <type>Text</type>
</CustomField>