force-app/main/default/objects/Sym_Case__c/fields/Sym_Average_age_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Sym_Average_age_of_Employees__c</fullName>
    <label>Average age of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>