force-app/main/default/objects/Sym_Case__c/fields/Sym_Avg_Prem_PMPM__c.field-meta.xml
<CustomField>
    <fullName>Sym_Avg_Prem_PMPM__c</fullName>
    <label>Avg Prem PMPM</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>