force-app/main/default/objects/Sym_Case__c/fields/Sym_Bill_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Sym_Bill_Delivery__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bill Delivery</label>
    <length>160</length>
    <type>Text</type>
</CustomField>