force-app/main/default/objects/Sym_Case__c/fields/Sym_Billing_Admin_Preferences_ID__c.field-meta.xml
<CustomField>
    <fullName>Sym_Billing_Admin_Preferences_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing &amp; Admin Preferences ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>