force-app/main/default/objects/Sym_Case__c/fields/Sym_billing_city__c.field-meta.xml
<CustomField>
    <fullName>Sym_billing_city__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>