force-app/main/default/objects/Sym_Case__c/fields/sym_billing_state__c.field-meta.xml
<CustomField>
    <fullName>sym_billing_state__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>