force-app/main/default/objects/Sym_Case__c/fields/Sym_Broker_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Sym_Broker_Contact_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Broker Contact ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>