force-app/main/default/objects/Sym_Case__c/fields/Sym_Broker_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Sym_Broker_Last_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Broker Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>