force-app/main/default/objects/Sym_Case__c/fields/Sym_Brokerage_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Sym_Brokerage_Account_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Brokerage Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>