force-app/main/default/objects/Sym_Case__c/fields/Sym_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Sym_Case_Status__c</fullName>
    <label>Case Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer setup is initiated</fullName>
            </value>
            <value>
                <fullName>Customer setup is Completed</fullName>
            </value>
            <value>
                <fullName>Member Enrollment Complete</fullName>
            </value>
            <value>
                <fullName>Billing is activated and ID cards are available</fullName>
            </value>
            <value>
                <fullName>Contract is ready for signature</fullName>
                <isActive>false</isActive>
                <label>Contract is ready for signature</label>
            </value>
            <value>
                <fullName>Pre Sold</fullName>
                <isActive>false</isActive>
                <label>Pre Sold</label>
            </value>
            <value>
                <fullName>Set the Billing and Admin Preferences</fullName>
                <isActive>false</isActive>
                <label>Set the Billing and Admin Preferences</label>
            </value>
            <value>
                <fullName>Sold</fullName>
                <isActive>false</isActive>
                <label>Sold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>