force-app/main/default/objects/Sym_Case__c/fields/Sym_Census_ID__c.field-meta.xml
<CustomField>
    <fullName>Sym_Census_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Census ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>