force-app/main/default/objects/Sym_Case__c/fields/Sym_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Sym_Contract_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>