force-app/main/default/objects/Sym_Case__c/fields/sym_county__c.field-meta.xml
<CustomField>
    <fullName>sym_county__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>County</label>
    <length>30</length>
    <type>Text</type>
</CustomField>