force-app/main/default/objects/Sym_Case__c/fields/Sym_Current_As_Of__c.field-meta.xml
<CustomField>
    <fullName>Sym_Current_As_Of__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current As Of</label>
    <type>Date</type>
</CustomField>