force-app/main/default/objects/Sym_Case__c/fields/Sym_Current_Individual_Deduct_In_Network__c.field-meta.xml
<CustomField>
    <fullName>Sym_Current_Individual_Deduct_In_Network__c</fullName>
    <label>Current Individual Deductible In Network</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>