force-app/main/default/objects/Sym_Case__c/fields/Sym_Current_OOP_max_Family_OON__c.field-meta.xml
<CustomField>
    <fullName>Sym_Current_OOP_max_Family_OON__c</fullName>
    <label>Current OOP max Family OON</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>