force-app/main/default/objects/Sym_Case__c/fields/Sym_Current_OOP_max_Individual_INN__c.field-meta.xml
<CustomField>
    <fullName>Sym_Current_OOP_max_Individual_INN__c</fullName>
    <label>Current OOP max Individual INN</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>