force-app/main/default/objects/Sym_Case__c/fields/Sym_Current_premium_PMPM_Individual_IN__c.field-meta.xml
<CustomField>
    <fullName>Sym_Current_premium_PMPM_Individual_IN__c</fullName>
    <label>Current premium Individual INN</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>