force-app/main/default/objects/Sym_Case__c/fields/Sym_Current_Rx_Tier_One_Coinsurance__c.field-meta.xml
<CustomField>
    <fullName>Sym_Current_Rx_Tier_One_Coinsurance__c</fullName>
    <label>Current Rx Tier One Coinsurance</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>