force-app/main/default/objects/Sym_Case__c/fields/Sym_Current_Rx_Tier_One_Copay__c.field-meta.xml
<CustomField>
    <fullName>Sym_Current_Rx_Tier_One_Copay__c</fullName>
    <label>Current Rx Tier One Copay</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>