force-app/main/default/objects/Sym_Case__c/fields/Sym_Data_sets_visible_to_client__c.field-meta.xml
<CustomField>
    <fullName>Sym_Data_sets_visible_to_client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow client to view data sets chosen</label>
    <type>Checkbox</type>
</CustomField>