force-app/main/default/objects/Sym_Case__c/fields/sym_effective_date__c.field-meta.xml
<CustomField>
    <fullName>sym_effective_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>