force-app/main/default/objects/Sym_Case__c/fields/Sym_Employee_Age_Ranges__c.field-meta.xml
<CustomField>
    <fullName>Sym_Employee_Age_Ranges__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employee Age Ranges</label>
    <length>30</length>
    <type>Text</type>
</CustomField>