force-app/main/default/objects/Sym_Case__c/fields/sym_employee_retiree__c.field-meta.xml
<CustomField>
    <fullName>sym_employee_retiree__c</fullName>
    <label>Employee retiree</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>