force-app/main/default/objects/Sym_Case__c/fields/Sym_Fam_Out_Network_Deductible_Max__c.field-meta.xml
<CustomField>
    <fullName>Sym_Fam_Out_Network_Deductible_Max__c</fullName>
    <label>Family deductible out of network max</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>