force-app/main/default/objects/Sym_Case__c/fields/Sym_Family_Max_Oo_in_ntwrk_min__c.field-meta.xml
<CustomField>
    <fullName>Sym_Family_Max_Oo_in_ntwrk_min__c</fullName>
    <label>Family Max Out-of-Pocket in network min</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>