force-app/main/default/objects/Sym_Case__c/fields/Sym_Family_Max_OoP_ot_ntwrk_max__c.field-meta.xml
<CustomField>
    <fullName>Sym_Family_Max_OoP_ot_ntwrk_max__c</fullName>
    <label>Family Max Out-of-Pocket out network max</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>