force-app/main/default/objects/Sym_Case__c/fields/Sym_Family_PMPM__c.field-meta.xml
<CustomField>
    <fullName>Sym_Family_PMPM__c</fullName>
    <label>Family PMPM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>