force-app/main/default/objects/Sym_Case__c/fields/Sym_Gender__c.field-meta.xml
<CustomField>
    <fullName>Sym_Gender__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>