force-app/main/default/objects/Sym_Case__c/fields/Sym_HSA_Medical_Plan__c.field-meta.xml
<CustomField>
    <fullName>Sym_HSA_Medical_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HSA Medical Plan</label>
    <type>Checkbox</type>
</CustomField>