force-app/main/default/objects/Sym_Case__c/fields/Sym_In_Network_Coinsurance_Maximum__c.field-meta.xml
<CustomField>
    <fullName>Sym_In_Network_Coinsurance_Maximum__c</fullName>
    <label>In network Coinsurance max</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>