force-app/main/default/objects/Sym_Case__c/fields/Sym_Individual_PMPM__c.field-meta.xml
<CustomField>
    <fullName>Sym_Individual_PMPM__c</fullName>
    <label>Individual PMPM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>