force-app/main/default/objects/Sym_Case__c/fields/Sym_Indvdl_In_Ntwk_Deduct_Min__c.field-meta.xml
<CustomField>
    <fullName>Sym_Indvdl_In_Ntwk_Deduct_Min__c</fullName>
    <label>Individual deductible in network min</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>