force-app/main/default/objects/Sym_Case__c/fields/Sym_Indvdl_Max_OoP_ot_ntwrk_min__c.field-meta.xml
<CustomField>
    <fullName>Sym_Indvdl_Max_OoP_ot_ntwrk_min__c</fullName>
    <label>Indvdl Max Out-of-Pocket out network min</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>