force-app/main/default/objects/Sym_Case__c/fields/sym_inputTier__c.field-meta.xml
<CustomField>
    <fullName>sym_inputTier__c</fullName>
    <label>inputTier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>