force-app/main/default/objects/Sym_Case__c/fields/Sym_Number_Between_21_30__c.field-meta.xml
<CustomField>
    <fullName>Sym_Number_Between_21_30__c</fullName>
    <label>Number Between 21-30</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>