force-app/main/default/objects/Sym_Case__c/fields/Sym_Number_between_31_40__c.field-meta.xml
<CustomField>
    <fullName>Sym_Number_between_31_40__c</fullName>
    <label>Number between 31-40</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>