force-app/main/default/objects/Sym_Case__c/fields/Sym_Number_between_41_50__c.field-meta.xml
<CustomField>
    <fullName>Sym_Number_between_41_50__c</fullName>
    <label>Number between 41-50</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>