force-app/main/default/objects/Sym_Case__c/fields/Sym_Number_of_Bills__c.field-meta.xml
<CustomField>
    <fullName>Sym_Number_of_Bills__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Number of Bills</label>
    <length>160</length>
    <type>Text</type>
</CustomField>