force-app/main/default/objects/Sym_Case__c/fields/sym_number_of_employees__c.field-meta.xml
<CustomField>
    <fullName>sym_number_of_employees__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Number of Employees</label>
    <length>40</length>
    <type>Text</type>
</CustomField>