force-app/main/default/objects/Sym_Case__c/fields/SYm_Number_of_family_plans__c.field-meta.xml
<CustomField>
    <fullName>SYm_Number_of_family_plans__c</fullName>
    <label>Number of family plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>