force-app/main/default/objects/Sym_Case__c/fields/Sym_Number_of_Male__c.field-meta.xml
<CustomField>
    <fullName>Sym_Number_of_Male__c</fullName>
    <label>Number of Male</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>