force-app/main/default/objects/Sym_Case__c/fields/Sym_Number_of_Plans__c.field-meta.xml
<CustomField>
    <fullName>Sym_Number_of_Plans__c</fullName>
    <label>Number of Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>