force-app/main/default/objects/Sym_Case__c/fields/Sym_Number_over_60__c.field-meta.xml
<CustomField>
    <fullName>Sym_Number_over_60__c</fullName>
    <label>Number over 60</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>