force-app/main/default/objects/Sym_Case__c/fields/sym_opportunity_stage__c.field-meta.xml
<CustomField>
    <fullName>sym_opportunity_stage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>