force-app/main/default/objects/Sym_Case__c/fields/Sym_Out_Network_Coinsurance_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Sym_Out_Network_Coinsurance_Minimum__c</fullName>
    <label>Out-of-Network Coinsurance Minimum</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>