force-app/main/default/objects/Sym_Case__c/fields/Sym_Participation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Sym_Participation_Rate__c</fullName>
    <label>Participation Rate</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>