force-app/main/default/objects/Sym_Case__c/fields/Sym_Payment_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Sym_Payment_Account_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Account Type</label>
    <length>160</length>
    <type>Text</type>
</CustomField>