force-app/main/default/objects/Sym_Case__c/fields/Sym_Payment_preference__c.field-meta.xml
<CustomField>
    <fullName>Sym_Payment_preference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment preference</label>
    <length>160</length>
    <type>Text</type>
</CustomField>