force-app/main/default/objects/Sym_Case__c/fields/Sym_Pharmacy_Tier_1_coinsur_min__c.field-meta.xml
<CustomField>
    <fullName>Sym_Pharmacy_Tier_1_coinsur_min__c</fullName>
    <label>Pharmacy Tier 1 coinsurance min</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>