force-app/main/default/objects/Sym_Case__c/fields/Sym_Pharmacy_Tier_1_copay_min__c.field-meta.xml
<CustomField>
    <fullName>Sym_Pharmacy_Tier_1_copay_min__c</fullName>
    <label>Pharmacy Tier 1 copay min</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>