force-app/main/default/objects/Sym_Case__c/fields/Sym_Pharmacy_Tier_2_copay_max__c.field-meta.xml
<CustomField>
    <fullName>Sym_Pharmacy_Tier_2_copay_max__c</fullName>
    <label>Pharmacy Tier 2 copay max</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>