force-app/main/default/objects/Sym_Case__c/fields/Sym_POS_Medical_Plan__c.field-meta.xml
<CustomField>
    <fullName>Sym_POS_Medical_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POS Medical Plan</label>
    <type>Checkbox</type>
</CustomField>