force-app/main/default/objects/Sym_Case__c/fields/Sym_Prescription_Coinsurance_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Sym_Prescription_Coinsurance_Minimum__c</fullName>
    <label>Prescription Coinsurance Minimum</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>