force-app/main/default/objects/Sym_Case__c/fields/Sym_Prescription_Copay_maximum__c.field-meta.xml
<CustomField>
    <fullName>Sym_Prescription_Copay_maximum__c</fullName>
    <label>Prescription Copay maximum</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>