force-app/main/default/objects/Sym_Case__c/fields/sym_primary_contact_email__c.field-meta.xml
<CustomField>
    <fullName>sym_primary_contact_email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Contact Email</label>
    <type>Email</type>
</CustomField>