force-app/main/default/objects/Sym_Case__c/fields/Sym_primary_contact_id__c.field-meta.xml
<CustomField>
    <fullName>Sym_primary_contact_id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Contact ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>