force-app/main/default/objects/Sym_Case__c/fields/sym_primary_contact_phone__c.field-meta.xml
<CustomField>
    <fullName>sym_primary_contact_phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Contact Phone</label>
    <type>Phone</type>
</CustomField>