force-app/main/default/objects/Sym_Case__c/fields/sym_primary_first_name__c.field-meta.xml
<CustomField>
    <fullName>sym_primary_first_name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Contact First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>