force-app/main/default/objects/Sym_Case__c/fields/Sym_Prioritize_Medical_Plans__c.field-meta.xml
<CustomField>
    <fullName>Sym_Prioritize_Medical_Plans__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prioritize Medical Plans</label>
    <length>255</length>
    <type>Text</type>
</CustomField>