force-app/main/default/objects/Sym_Case__c/fields/sym_quote_id__c.field-meta.xml
<CustomField>
    <fullName>sym_quote_id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quote ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>