force-app/main/default/objects/Sym_Case__c/fields/sym_quote_status__c.field-meta.xml
<CustomField>
    <fullName>sym_quote_status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quote Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>