force-app/main/default/objects/Sym_Case__c/fields/Sym_Recommendation_Strength__c.field-meta.xml
<CustomField>
    <fullName>Sym_Recommendation_Strength__c</fullName>
    <label>Recommendation Strength</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>