force-app/main/default/objects/Sym_Case__c/fields/Sym_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Sym_Routing_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Routing Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>